--- a/app/src/main/res/layout/upcoming_movies_items.xml
+++ b/app/src/main/res/layout/upcoming_movies_items.xml
@@ -3,11 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    >
 
   <ImageView
       android:id="@+id/imageView2"
-      android:layout_width="100dp"
+      android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginEnd="8dp"
       android:layout_marginStart="8dp"
@@ -24,6 +25,8 @@
       android:layout_marginEnd="8dp"
       android:layout_marginStart="8dp"
       android:layout_marginTop="8dp"
+      android:ellipsize="end"
+      android:maxLines="2"
       android:text="TextView"
       android:textAlignment="center"
       android:textStyle="bold"
