Removed padding top from now playing and upcoming items, rename id.

--- a/app/src/main/res/layout/now_playing_movies_items.xml
+++ b/app/src/main/res/layout/now_playing_movies_items.xml
@@ -7,7 +7,7 @@
     >
 
   <ImageView
-      android:id="@+id/imageView3"
+      android:id="@+id/now_playing_image"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginEnd="8dp"
@@ -19,7 +19,7 @@
       app:srcCompat="@mipmap/ic_launcher"
       />
   <TextView
-      android:id="@+id/textView1"
+      android:id="@+id/now_playing_title"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginEnd="8dp"
@@ -27,11 +27,10 @@
       android:layout_marginTop="8dp"
       android:ellipsize="end"
       android:maxLines="2"
-      android:text="TextView"
       android:textAlignment="center"
       android:textStyle="bold"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/imageView2"
+      app:layout_constraintTop_toBottomOf="@+id/now_playing_image"
       />
 </android.support.constraint.ConstraintLayout>
