--- a/app/src/main/res/layout/movie_header_layout.xml
+++ b/app/src/main/res/layout/movie_header_layout.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
   <ImageView
-      android:id="@+id/movie_image"
+      android:id="@+id/movie_header_poster"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="8dp"
@@ -16,16 +16,16 @@
       app:srcCompat="@mipmap/ic_launcher"
       />
   <TextView
-      android:id="@+id/movie_title"
+      android:id="@+id/movie_header_title"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginEnd="8dp"
       android:layout_marginStart="8dp"
       android:layout_marginTop="8dp"
-      android:textSize="18sp"
+      android:textSize="16sp"
       android:textStyle="bold"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toEndOf="@+id/movie_image"
+      app:layout_constraintStart_toEndOf="@+id/movie_header_poster"
       app:layout_constraintTop_toTopOf="parent"
       />
 </android.support.constraint.ConstraintLayout>
