--- a/app/src/main/res/layout/movie_artworks_layout.xml
+++ b/app/src/main/res/layout/movie_artworks_layout.xml
@@ -25,6 +25,7 @@
       android:layout_marginEnd="8dp"
       android:layout_marginStart="8dp"
       android:layout_marginTop="8dp"
+      android:textSize="18sp"
       android:text="@string/artworks_title"
       android:textStyle="bold"
       app:layout_constraintEnd_toEndOf="parent"
