--- a/app/src/main/res/layout/movie_full_layout.xml
+++ b/app/src/main/res/layout/movie_full_layout.xml
@@ -37,7 +37,7 @@
         />
 
     <include
-        layout="@layout/movie_artworks_item"
+        layout="@layout/movie_artworks_layout"
         android:id="@+id/include3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -49,6 +49,18 @@
         app:layout_constraintTop_toBottomOf="@+id/include2"
         />
 
+    <include
+        layout="@layout/movie_trailer_layout"
+        android:id="@+id/include4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/include3"
+        />
 
   </android.support.constraint.ConstraintLayout>
 </ScrollView>
