--- a/app/src/main/res/layout/movie_trailer_item.xml
+++ b/app/src/main/res/layout/movie_trailer_item.xml
@@ -2,8 +2,14 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:id="@+id/movie_trailer_layout"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:elevation="6dp"
+    android:background="@color/colorWhite"
+    android:layout_marginEnd="5dp"
+    android:layout_marginStart="5dp"
+    >
 
   <ImageView
       android:id="@+id/movie_thumbnail"
@@ -19,12 +25,11 @@
       />
   <TextView
       android:id="@+id/movie_thumbnail_title"
-      android:layout_width="0dp"
-      android:layout_height="wrap_content"
-      android:layout_marginEnd="8dp"
+      android:layout_width="150dp"
+      android:layout_height="50dp"
       android:layout_marginStart="8dp"
       android:layout_marginTop="8dp"
-      app:layout_constraintEnd_toEndOf="parent"
+      android:maxLines="3"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/movie_thumbnail"
       />
