Improved the layout of upcoming movies and now playing movies. Tapping on upcoming movie poster creates an intent to the movie activity

--- a/app/src/main/res/layout/upcoming_movies_items.xml
+++ b/app/src/main/res/layout/upcoming_movies_items.xml
@@ -4,15 +4,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="5dp"
+    android:background="@color/colorWhite"
+    android:elevation="6dp"
     >
 
   <ImageView
       android:id="@+id/upcoming_movies_poster"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginEnd="8dp"
-      android:layout_marginStart="8dp"
-      android:layout_marginTop="8dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
@@ -22,15 +22,15 @@
       android:id="@+id/upcoming_movies_title"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
-      android:layout_marginEnd="8dp"
-      android:layout_marginStart="8dp"
-      android:layout_marginTop="8dp"
+      android:layout_margin="8dp"
       android:ellipsize="end"
       android:maxLines="2"
+      android:paddingBottom="8dp"
       android:textAlignment="center"
       android:textStyle="bold"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/upcoming_movies_poster"
       />
+
 </android.support.constraint.ConstraintLayout>
