--- a/app/src/main/res/layout/now_playing_movies_items.xml
+++ b/app/src/main/res/layout/now_playing_movies_items.xml
@@ -4,6 +4,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="5dp"
+    android:background="@color/colorWhite"
+    android:elevation="6dp"
     >
 
   <ImageView
@@ -18,15 +21,15 @@
       app:layout_constraintTop_toTopOf="parent"
       app:srcCompat="@mipmap/ic_launcher"
       />
+
   <TextView
       android:id="@+id/now_playing_title"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
-      android:layout_marginEnd="8dp"
-      android:layout_marginStart="8dp"
-      android:layout_marginTop="8dp"
+      android:layout_margin="8dp"
       android:ellipsize="end"
       android:maxLines="2"
+      android:paddingBottom="8dp"
       android:textAlignment="center"
       android:textStyle="bold"
       app:layout_constraintEnd_toEndOf="parent"
