--- a/app/src/main/res/layout/movie_artworks_layout.xml
+++ b/app/src/main/res/layout/movie_artworks_layout.xml
@@ -7,7 +7,7 @@
     android:layout_height="wrap_content"
     >
   <TextView
-      android:id="@+id/textView"
+      android:id="@+id/artwork_title"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginEnd="8dp"
@@ -21,15 +21,15 @@
       app:layout_constraintTop_toTopOf="parent"
       />
 
-  <ImageView
-      android:id="@+id/movie_artwork_poster"
-      android:layout_width="wrap_content"
+  <android.support.v7.widget.RecyclerView
+      android:id="@+id/artwork_recycler_view"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_marginStart="8dp"
+      android:layout_marginEnd="8dp"
       android:layout_marginTop="8dp"
+      app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/textView"
-      app:srcCompat="@mipmap/ic_launcher"
+      app:layout_constraintTop_toBottomOf="@+id/artwork_title"
       />
 
 </android.support.constraint.ConstraintLayout>
