--- a/app/src/main/res/layout/movie_trailer_layout.xml
+++ b/app/src/main/res/layout/movie_trailer_layout.xml
@@ -13,7 +13,7 @@
       android:layout_marginEnd="8dp"
       android:layout_marginStart="8dp"
       android:layout_marginTop="8dp"
-      android:text="Trailer"
+      android:text="@string/trailer_title"
       android:textSize="18sp"
       android:textStyle="bold"
       app:layout_constraintEnd_toEndOf="parent"
@@ -30,7 +30,6 @@
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/trailer_title"
-      >
+      />
 
-  </android.support.v7.widget.RecyclerView>
 </android.support.constraint.ConstraintLayout>
