--- a/app/src/main/res/layout/favourite_movie_widget.xml
+++ b/app/src/main/res/layout/favourite_movie_widget.xml
@@ -8,7 +8,7 @@
     >
 
   <TextView
-      android:id="@+id/appwidget_text"
+      android:id="@+id/favourite_item_widget_title"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="30dp"
