--- a/app/src/main/res/layout/favourite_movie_widget.xml
+++ b/app/src/main/res/layout/favourite_movie_widget.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/widget_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:background="#09C"
     android:orientation="vertical"
     android:padding="@dimen/widget_margin"
@@ -11,7 +11,7 @@
       android:id="@+id/favourite_item_widget_title"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:textSize="30dp"
+      android:textSize="16sp"
       />
 
   <ListView
