--- a/app/src/main/res/layout/favourite_movie_widget.xml
+++ b/app/src/main/res/layout/favourite_movie_widget.xml
@@ -1,16 +1,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/widget_layout"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="#09C"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#fff"
     android:orientation="vertical"
-    android:padding="@dimen/widget_margin"
     >
 
   <TextView
       android:id="@+id/favourite_item_widget_title"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:background="#f0fff0"
+      android:textStyle="bold"
+      android:padding="10dp"
+      android:text="Favourite Movies"
+      android:textColor="#000"
       android:textSize="16sp"
       />
 
@@ -18,6 +23,9 @@
       android:id="@+id/widgetListView"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
+      android:divider="#f0f0f0"
+      android:dividerHeight="1dp"
+      tools:listitem="@layout/favourite_movie_list_item_widget"
       />
 
 </LinearLayout>
