--- a/app/src/main/res/xml/favourite_movie_widget_info.xml
+++ b/app/src/main/res/xml/favourite_movie_widget_info.xml
@@ -2,10 +2,10 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:initialKeyguardLayout="@layout/favourite_movie_widget"
     android:initialLayout="@layout/favourite_movie_widget"
-    android:minHeight="200dp"
-    android:minWidth="200dp"
-    android:previewImage="@drawable/example_appwidget_preview"
+    android:minHeight="40dp"
+    android:minWidth="40dp"
+    android:previewImage="@mipmap/ic_launcher"
     android:resizeMode="horizontal|vertical"
-    android:updatePeriodMillis="86400000"
+    android:updatePeriodMillis="1800000"
     android:widgetCategory="home_screen">
 </appwidget-provider>
