--- a/app/src/main/res/layout/favourite_movie_list_item_widget.xml
+++ b/app/src/main/res/layout/favourite_movie_list_item_widget.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/parentView"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="5dp"
@@ -11,9 +11,10 @@
       android:id="@+id/favourite_item_widget_text"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:text="Ant Man"
+      android:gravity="center"
+      android:text="@string/widget_test_item_text"
       android:textColor="#000"
-      android:textSize="20sp"
+      android:textSize="18sp"
       />
 
 </LinearLayout>
