--- a/app/src/main/res/layout/favourite_movie_widget.xml
+++ b/app/src/main/res/layout/favourite_movie_widget.xml
@@ -9,18 +9,19 @@
 
   <TextView
       android:id="@+id/favourite_item_widget_title"
-      android:layout_width="wrap_content"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:background="#f0fff0"
+      android:background="#4D4DFF"
+      android:gravity="center"
       android:padding="10dp"
-      android:text="Favourite Movies"
-      android:textColor="#000"
-      android:textSize="16sp"
+      android:text="@string/widget_favourite_movies_title"
+      android:textColor="#fff"
+      android:textSize="20sp"
       android:textStyle="bold"
       />
 
   <ListView
-      android:id="@+id/widgetListView"
+      android:id="@+id/widget_list_view"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:divider="#f0f0f0"
