--- a/app/src/main/res/layout/movie_header_layout.xml
+++ b/app/src/main/res/layout/movie_header_layout.xml
@@ -21,7 +21,8 @@
       android:layout_height="wrap_content"
       android:layout_marginEnd="8dp"
       android:layout_marginStart="8dp"
-      android:layout_marginTop="8dp"
+      android:layout_marginTop="16dp"
+      android:layout_marginBottom="16dp"
       android:textSize="16sp"
       android:textStyle="bold"
       app:layout_constraintEnd_toEndOf="parent"
