--- a/app/src/main/res/layout/widget_small_layout.xml
+++ b/app/src/main/res/layout/widget_small_layout.xml
@@ -22,6 +22,7 @@
       android:clickable="true"
       android:focusable="true"
       android:padding="10dp"
+      android:gravity="center"
       android:text="@string/widget_click_text"
       android:textColor="#000"
       android:textSize="16sp"
