Added content description for images

--- a/app/src/main/res/layout/movie_artwork_item.xml
+++ b/app/src/main/res/layout/movie_artwork_item.xml
@@ -17,6 +17,7 @@
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:srcCompat="@mipmap/ic_launcher"
+      android:contentDescription="@string/movie_artwork_poster_text"
       />
 
 </android.support.constraint.ConstraintLayout>
