--- a/app/src/main/res/layout/movie_header_layout.xml
+++ b/app/src/main/res/layout/movie_header_layout.xml
@@ -14,6 +14,7 @@
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:srcCompat="@mipmap/ic_launcher"
+      android:contentDescription="@string/movie_poster_text"
       />
   <TextView
       android:id="@+id/movie_header_title"
