--- a/app/src/main/res/layout/movie_full_layout.xml
+++ b/app/src/main/res/layout/movie_full_layout.xml
@@ -34,6 +34,7 @@
           android:fitsSystemWindows="true"
           android:scaleType="centerCrop"
           app:layout_collapseMode="parallax"
+          android:contentDescription="@string/movie_artwork_backdrop_text"
           />
 
       <android.support.v7.widget.Toolbar
