--- a/app/src/main/res/layout/now_playing_movies_items.xml
+++ b/app/src/main/res/layout/now_playing_movies_items.xml
@@ -20,6 +20,7 @@
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:srcCompat="@mipmap/ic_launcher"
+      android:contentDescription="@string/now_playing_image_text"
       />
 
   <TextView
