--- a/app/src/main/res/layout/upcoming_movies_items.xml
+++ b/app/src/main/res/layout/upcoming_movies_items.xml
@@ -17,6 +17,7 @@
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:srcCompat="@mipmap/ic_launcher"
+      android:contentDescription="@string/upcoming_movies_poster_text"
       />
   <TextView
       android:id="@+id/upcoming_movies_title"
